attempt to fix night vision mode on iOS Safari

--- a/src/app.css
+++ b/src/app.css
@@ -26,14 +26,13 @@ html {
 html.nv {
     filter: contrast(1.8) brightness(0.7);
     .overlay {
-        background-color: rgb(255, 0, 0);
-        background-blend-mode: color;
+        background-color: rgb(255 0 0);
         height: 100%;
         width: 100%;
         position: fixed;
         display: block;
-        mix-blend-mode: color;
-        pointer-events: none
+        mix-blend-mode: hue;
+        pointer-events: none;
     }
     h1, h2, h3, h4, h5, h6, p, ul, li, label, button, select, input {
         color: rgb(255, 174, 174);
